fix problem on small screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,7 +100,7 @@ header {
 }
 
 .main-title {
-  /* font-size: 3.5rem; */
+  font-size: 3.5rem;
   text-transform: uppercase;
 }
 
@@ -179,11 +179,15 @@ header {
   }
 
   .header-nav {
-    font-size: 0.8rem;
+    font-size: 1.3rem;
   }
 
   .button-play {
     width: 80%;
     font-size: 1.5rem;
+  }
+
+  .main-title {
+    font-size: 2.5rem;
   }
 }
